--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -1,10 +1,25 @@
-ul li{
-    display: inline;
+li{
     border: none;
     width: 150px;
-    list-style-type: none;
     padding: 20px 20px 20px 20px;
     margin-top: 10px;
     margin-left: 10px;
-    text-align: right;
+    text-align: center;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: flex-end;
+}
+
+a{
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+}
+
+a:hover{
+    color: #ffffff;
 }
