--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -1,3 +1,40 @@
+{
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    width: 100%;
+    height: 60px;
+    background-color: #669DA3;
+}
+
+nav p {
+    color: #ffffff;
+    font-size: 24px;
+    line-height: 55px;
+    float: left;
+    padding: 0px 20px;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    justify-content: flex-end;
+}
+
+nav ul li {
+    list-style-type: none;
+}
+
+nav ul li a {
+    color: #ffffff;
+    font-size: 14px;
+    padding: 22px 14px;
+    text-decoration: none;
+}
+
 li{
     border: none;
     width: 150px;
@@ -5,15 +42,7 @@ li{
     margin-top: 10px;
     margin-left: 10px;
     text-align: center;
-    background: #669DA3;
     color: #ffffff;
-}
-
-ul {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    justify-content: flex-end;
 }
 
 a{
