--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 
-<!-- Settings for navigation bar background -->
+/* Settings for navigation bar background */
 nav {
     width: 100%;
     height: 60px;
     background-color: #669DA3;
 }
 
-<!-- Settings for page name in navigation bar -->
+/* Settings for page name in navigation bar */
 nav p {
     color: #ffffff;
     font-size: 24px;
@@ -18,7 +18,7 @@ nav p {
     padding: 0px 0px 0px 10px;
 }
 
-<!-- Settings for outermost unordered list in navigation bar -->
+/* Settings for outermost unordered list in navigation bar */
 nav ul {
     display: flex;
     flex-direction: row;
@@ -27,13 +27,13 @@ nav ul {
     padding: 20px 15px 15px 15px;
 }
 
-<!-- Settings for tier 1 list items -->
+/* Settings for tier 1 list items */
 nav ul li {
     list-style-type: none;
     padding: 15 px;
 }
 
-<!-- Settings for tier 1 list links -->
+/* Settings for tier 1 list links */
 nav ul li a {
     color: #ffffff;
     font-size: 14px;
@@ -41,12 +41,12 @@ nav ul li a {
     text-decoration: none;
 }
 
-<!-- Hover highlight for tier 1 list links -->
+/* Hover highlight for tier 1 list links */
 nav ul li a:hover {
     color: #ffe09e;
 }
 
-<!-- Settings for nested unordere list in navigation bar -->
+/* Settings for nested unordere list in navigation bar */
 nav ul li ul {
     display: none;
     position: absolute;
@@ -55,23 +55,23 @@ nav ul li ul {
     border-radius: 0px 0px 4px 4px;
 }
 
-<!-- Settings for nested unordered list to display on hover -->
+/* Settings for nested unordered list to display on hover */
 nav ul li:hover ul {
     display: block;
 }
 
-<!-- Settings for 2nd tier list -->
+/* Settings for 2nd tier list */
 nav ul li ul li {
     border-radius: 4px;
     text-align: center;
 }
 
-<!-- Settings for 2nd tier list links -->
+/* Settings for 2nd tier list links */
 nav ul li ul li a {
     padding: 8px 14px;
 }
 
-<!-- Hover highlight for 2nd tier list links -->
+/* Hover highlight for 2nd tier list links */
 nav ul li ul li a:hover {
     color: #ffe09e;
 }
