--- a/islt_7355/aboutstyle.css
+++ b/islt_7355/aboutstyle.css
@@ -1,5 +1,8 @@
 h1 { color: #516769;}
-h2 { color: #FFA39E; font-size: 32pt};
+h2 { color: #FFA39E; font-size: 32pt;}
+h3 { color: #516769;}
+p { color: #516769;}
+blockquote { color: #516769;}
 
 body{
     margin: 40px;
