--- a/islt_7355/project1style.css
+++ b/islt_7355/project1style.css
@@ -8,7 +8,7 @@ body{
     margin: 5px;
 }
 
-/*Outer box for section 1 of About page*/
+/*Outer box for section 1 of Project page*/
 .a{
     grid-column: col 1 / span 4;
 	grid-row: row 1;
@@ -17,19 +17,19 @@ body{
 	grid-template-columns: 2fr 1fr;
 }
 
-/*Left inner box for section 1 of About page*/
+/*Left inner box for section 1 of Project page*/
 .b{
     grid-column: 1;
     grid-row: 1 / 2;
 }
 
-/*Right inner box for section 1 of About page*/
+/*Right inner box for section 1 of Project page*/
 .c{
     grid-column: 2;
     grid-row: 1;
 }
 
-/*Section 2 of About page*/
+/*Section 2 of Project page*/
 .d{
     background-color: #BFD5D7;
     color: #516769;
@@ -40,5 +40,4 @@ body{
     h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px;}
     h3 { color: #516769; font-size: 14pt;}
     p { color: #516769; font-size: 12pt;}
-    blockquote { color: #516769; font-size: 10pt;}
 }
