--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -7,6 +7,7 @@ nav {
     width: 100%;
     height: 60px;
     background-color: #669DA3;
+    z-index: 999999;
 }
 
 /* Settings for page name in navigation bar */
@@ -59,6 +60,7 @@ nav ul li ul {
 /* Settings for nested unordered list to display on hover */
 nav ul li:hover ul {
     display: block;
+    z-index: 999999;
 }
 
 /* Settings for 2nd tier list */
