--- a/islt_7355/aboutstyle.css
+++ b/islt_7355/aboutstyle.css
@@ -1,8 +1,24 @@
-h1 { color: #516769;}
-h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px;}
-h3 { color: #516769;}
-p { color: #516769;}
-blockquote { color: #516769;}
+@font-face { 
+
+    font-family: Alike; /*this is where we give our font a name so we can use it!*/
+    
+    src: url("Alike/Alike-Regular.ttf");
+    
+}
+
+@font-face { 
+
+     font-family: Montserrat; /*this is where we give our font a name so we can use it!*/
+        
+     src: url("Montserrat/Montserrat-VariableFont_wght.ttf");
+        
+}
+
+h1 { color: #516769; font-family: Alike;}
+h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
+h3 { color: #516769; font-family: Montserrat;}
+p { color: #516769;font-family: Alike;}
+blockquote { color: #516769; font-family: Alike;}
 
 body{
     margin: 5px;
@@ -42,9 +58,101 @@ body{
 }
 
 @media only screen and (max-width: 640px) {
-    h1 { color: #516769; font-size: 22pt;}
-    h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px;}
-    h3 { color: #516769; font-size: 14pt;}
-    p { color: #516769; font-size: 12pt;}
-    blockquote { color: #516769; font-size: 10pt;}
+    h1 { color: #516769; font-size: 22pt; font-family: Alike;}
+    h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
+    h3 { color: #516769; font-size: 14pt; font-family: Montserrat;}
+    p { color: #516769; font-size: 12pt; font-family: Alike;}
+    blockquote { color: #516769; font-size: 10pt; font-family: Alike;}
+}
+
+/*set page print settings*/
+@media print {
+    * {
+        background: transparent !important;
+        color: #000000 !important;
+    }
+
+    nav {
+        display: none;
+    }
+
+/*Outer box for section 1 of About page*/
+.a{
+    grid-column: col 1;
+	grid-row: row 1 / span 2;
+	display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr;
+}
+
+/*center name*/
+.a h2 {
+    text-align: center;
+    font-size: 18pt;
+}
+
+/*center job title*/
+.a h3 {
+    text-align: center;
+    font-size: 16pt;
+}
+
+/*justify paragraphs*/
+.a p {
+    text-align: justify;
+    font-size: 12pt;
+}
+
+/*Left inner box for section 1 of About page*/
+.b{
+    grid-column: 2;
+    grid-row: 1;
+}
+
+/*Hide image on About page for print version*/
+.c{
+    display: none;
+}
+
+/*Block quote*/
+.cb {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+/*Section 2 of About page*/
+.d {
+    text-align: center;
+}
+
+.d h3 {
+    font-size: 16pt;
+}
+
+.d p {
+    font-size: 12pt;
+}
+
+/*Hide video on About page for print version*/
+.e {
+    display: none;
+}
+
+footer {
+    font-size: 10pt;
+    position: absolute;
+    bottom: 0;
+}
+
+/*display link text*/
+    a[href^="http:"]::after {
+        content: "[" attr(href)"]";
+        color: blue;
+    }
+}
+
+/*set page print margins*/
+@page {
+    margin: 1in;
 }
