--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -1,3 +1,19 @@
+@font-face { 
+
+    font-family: Alike; /*this is where we give our font a name so we can use it!*/
+    
+    src: url("Alike/Alike-Regular.ttf");
+    
+}
+
+@font-face { 
+
+     font-family: Montserrat; /*this is where we give our font a name so we can use it!*/
+        
+     src: url("Montserrat/Montserrat-VariableFont_wght.ttf");
+        
+}
+
 #hamburger {
     display: none;
 }
@@ -8,6 +24,7 @@ nav {
     height: 60px;
     background-color: #669DA3;
     z-index: 999999;
+    font-family: Alike;
 }
 
 /* Settings for page name in navigation bar */
