--- a/islt_7355/indexstyle.css
+++ b/islt_7355/indexstyle.css
@@ -14,15 +14,15 @@
         
 }
 
+body {
+    margin: 0;
+}
+
 h1 { color: #516769; font-family: Alike;}
 h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
 h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
 blockquote { color: #516769; font-family: Alike;}
-
-body{
-    margin: 5px;
-}
 
 
 .a{
@@ -88,6 +88,19 @@ body{
     grid-column: 2;
     grid-row: 2;
     text-align: center;
+}
+
+footer {
+    background-image: url(FooterBG.png);
+    margin-bottom: 0;
+}
+
+footer p {
+    color: #ffffff;
+}
+
+footer a {
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 640px) {
