--- a/islt_7355/project1style.css
+++ b/islt_7355/project1style.css
@@ -20,8 +20,8 @@ h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
 blockquote { color: #516769; font-family: Alike;}
 
-body{
-    margin: 5px;
+body {
+    margin: 0;
 }
 
 /*Outer box for section 1 of Project page*/
@@ -49,6 +49,19 @@ body{
 .d{
     background-color: #BFD5D7;
     color: #516769;
+}
+
+footer {
+    background-image: url(FooterBG.png);
+    margin-bottom: 0;
+}
+
+footer p {
+    color: #ffffff;
+}
+
+footer a {
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 640px) {
