--- a/islt_7355/reflectionstyle.css
+++ b/islt_7355/reflectionstyle.css
@@ -14,13 +14,14 @@
         
 }
 
+
 h1 { color: #516769; font-family: Alike;}
 h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
 h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
 
 body{
-    margin: 5px;
+    margin: 0;
 }
 
 /*Outer box for sections 1 & 3of Reflection page*/
@@ -69,6 +70,19 @@ body{
 .g{
     grid-column: 3;
     grid-row:1;
+}
+
+footer {
+    background-image: url(FooterBG.png);
+    margin-bottom: 0;
+}
+
+footer p {
+    color: #ffffff;
+}
+
+footer a {
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 640px) {
