--- a/islt_7355/indexstyle.css
+++ b/islt_7355/indexstyle.css
@@ -103,6 +103,27 @@ footer a {
     color: #ffffff;
 }
 
+/*small icon settings*/
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
+/*big icon settings*/
+.iconbig {
+    position: absolute;
+    width: 0px;
+    -webkit-transition:width 0.3s linear 0s;
+    transition:width 0.3s linear 0s;
+    z-index:10;
+    transform: translateY(-20px);
+}
+
+/*display big icon on hover*/
+.icon:hover + .iconbig{
+    width: 20px;
+}
+
 @media only screen and (max-width: 640px) {
     h1 { color: #516769; font-size: 22pt; font-family: Alike;}
     h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
