--- a/islt_7355/reflectionstyle.css
+++ b/islt_7355/reflectionstyle.css
@@ -85,6 +85,27 @@ footer a {
     color: #ffffff;
 }
 
+/*small icon settings*/
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
+/*big icon settings*/
+.iconbig {
+    position: absolute;
+    width: 0px;
+    -webkit-transition:width 0.3s linear 0s;
+    transition:width 0.3s linear 0s;
+    z-index:10;
+    transform: translateY(-20px);
+}
+
+/*display big icon on hover*/
+.icon:hover + .iconbig{
+    width: 20px;
+}
+
 @media only screen and (max-width: 640px) {
     /*Resize text*/
     h1 { color: #516769; font-size: 22pt; font-family: Alike;}
