--- a/islt_7355/nav.css
+++ b/islt_7355/nav.css
@@ -115,6 +115,7 @@ nav ul li ul li a:hover {
 			}
 	nav:hover ul {
 		display: block;
+        z-index: 9999;
 	}
     	nav:hover #mobileHide {
 		display: none;
