--- a/islt_7355/project2style.css
+++ b/islt_7355/project2style.css
@@ -18,7 +18,6 @@ h1 { color: #516769; font-family: Alike;}
 h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
 h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
-ul {font-size: 12pt;}
 blockquote { color: #516769; font-family: Alike;}
 
 body {
@@ -27,21 +26,21 @@ body {
 
 /*Outer box for section 1 of Project page*/
 .a{
-    grid-column: col 1 / span 4;
-	grid-row: row 1;
+    grid-column: col 1 / span 3;
+	grid-row: row 1 / span 3;
 	display: grid;
     grid-gap: 10px;
-	grid-template-columns: 2fr 1fr;
-    margin-left: 10px;
+	grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 /*Left inner box for section 1 of Project page*/
 .b{
     grid-column: 1;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
 }
 
-/*Right inner box for section 1 of Project page*/
+/*Right inner box 1 for section 1 of Project page*/
 .ca{
     grid-column: 2;
     grid-row: 1;
@@ -57,9 +56,11 @@ body {
 .d{
     background-color: #BFD5D7;
     color: #516769;
+    padding-top: 5px;
+    padding-bottom: 10px;
 }
 
-
+/*Footer section*/
 footer {
     background-image: url(FooterBG.png);
     margin-bottom: 0;
