--- a/islt_7355/NavTestStyle.css
+++ b/islt_7355/NavTestStyle.css
@@ -1,59 +1,78 @@
-html, body {
+body {
     width: 100%;
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
-nav {
-    border-bottom: 1px solid #EAEAEB;
-    text-align: right;
-    height: 70px;
-    line-height: 70px;
+header nav {
+    width: 100%;
+    background-color: #669DA3;
+
 }
 
-.menu {
-    margin 0 30px 0 0;
+header nav ul {
+    display: flex;
+    justify-content: flex-end;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
 }
 
-.menu a {
+header nav ul li {
+    list-style-type: none;
+    position: relative;
+    padding: 10px 15px;
+    transition: 0.5s;
+    box-sizing: border-box;
+    border-right: 1px solid #516769;
+}
+
+header nav ul li:hover {
+    background-color: #ffe09e;
+}
+
+header nav ul li:last-child {
+    border-right: none;
+}
+
+header nav ul li a {
     text-decoration: none;
-    color: gray;
-    margin: 0 10px;
-    line-height: 70px;
+    padding: 0 20px;
+    color: #ffffff;
 }
 
-label {
-    margin: 0 40px 0 0;
-    font-size: 26px;
-    line-height: 70px;
-    display: none;
-    width: 26px;
-    float: right;
-}
-
-#toggle {
+header nav ul li ul {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    background-color: #669DA3;
+    display: block;
+    width: 200px;
+    transition: 0.5s;
     display: none;
 }
 
-@media only screen and (max-width: 500px) {
-    label {
+header nav ul li:hover ul {
+    display: block;
+}
+
+header nav ul li ul {
+    border-right: none;
+    border-bottom: 1px solid #516769;
+}
+
+@media (max-width: 768px) {
+    header nav ul {
         display: block;
     }
 
-    .menu {
-        text-align: center;
-        width: 100%;
-        display: none;
+    header nav ul li {
+        display: block;
     }
     
-    .menu a {
-        display: block;
-        border-bottom: 1px solid #EAEAEB;
-        margin: 0;
-        clear: right;
-    }
-
-    #toggle:checked + .menu {
-        display: block;
+    header nav ul li ul {
+        width: 100%;
+        z-index: 1;
     }
 }
