--- a/islt_7355/aboutstyle.css
+++ b/islt_7355/aboutstyle.css
@@ -56,6 +56,8 @@ blockquote { color: #516769; font-family: Alike;}
 .d{
     background-color: #BFD5D7;
     color: #516769;
+    padding-top: 5px;
+    padding-bottom: 10px;
 }
 
 footer {
