--- a/islt_7355/indexstyleTEST.css
+++ b/islt_7355/indexstyleTEST.css
@@ -14,58 +14,113 @@
         
 }
 
+body {
+    margin: 0;
+}
+
 h1 { color: #516769; font-family: Alike;}
 h2 { color: #FFA39E; font-size: 32pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
 h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
 blockquote { color: #516769; font-family: Alike;}
 
-body {
-    margin: 0;
-}
 
-/*Outer box for section 1 of Project page*/
 .a{
-    grid-column: col 1 / span 3;
-	grid-row: row 1 / span 3;
+    grid-column: col 1 / span 4;
+	grid-row: row 1;
 	display: grid;
     grid-gap: 10px;
-	grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    padding: 10px;
+    text-align: center;
 }
 
-/*Left inner box for section 1 of Project page*/
 .b{
-    grid-column: 1;
-    grid-row: 1 / 3;
+    grid-column: col 2 / 3;
+	grid-row: row 1;
+	display: grid;
+    grid-gap: 10px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
-/*Right inner box 1 for section 1 of Project page*/
-.ca{
+/*Outer container for section 3 of Home page*/
+.c{
+    grid-column: col 1 / span 4;
+	grid-row: row 1;
+	display: grid;
+    grid-gap: 10px;
+	grid-template-columns: 1fr 1fr;
+}
+
+/*Center all paragraphs within outer container for section 3*/
+.c p{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+/*Left upper box for section 1 of About page*/
+.d{
+    grid-column: 1;
+    grid-row: 1;
+    text-align: center;
+}
+
+/*Right upper box of Home page*/
+.e{
     grid-column: 2;
     grid-row: 1;
-}
- /*Right inner box 2 for section 1 of Project page*/
-.cb{
-    grid-column: 3;
-    grid-row: 1;
-    
+    text-align: center;
 }
 
-/*Section 2 of Project page*/
-.d{
-    background-color: #BFD5D7;
-    color: #516769;
-    padding: 10px;
+/*Left lower box of Home page*/
+.f{
+    grid-column: 1;
+    grid-row: 2;
+    text-align: center;
 }
 
-/*Section 3 of Project page*/
-.e{
-    padding: 10px;
+/*Right lower box of Home page*/
+.g{
+    grid-column: 2;
+    grid-row: 2;
+    text-align: center;
 }
 
-/*Footer section*/
+/*.h {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #55555500;
+    border: red 1px;
+    min-width: 1em;
+    border-radius: 50%;
+    vertical-align: middle;
+  }
+  
+  .h:before {
+    content:'';
+    float: left;
+    width: auto;
+    padding-bottom: 100%;
+  }*/
+
+.circle {
+    background-color:#fff;
+    border:1px solid red;    
+    height:100px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width:100px;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+
 footer {
     background-image: url(FooterBG.png);
     margin-bottom: 0;
@@ -105,29 +160,4 @@ footer a {
     h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
     h3 { color: #516769; font-size: 14pt; font-family: Montserrat;}
     p { color: #516769; font-size: 12pt; font-family: Alike;}
-
-    .a{
-        grid-column: col 1;
-        grid-row: row 1 / span 3;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-gap: 2%;
-    }
-    
-    .b{
-        grid-column: 1;
-        grid-row: 1;
-    }
-
-    .ca{
-        grid-column: 1;
-        grid-row: 2;
-    }
-
-    .cb{
-        grid-column: 1 / 2;
-        grid-row: 3;
-    }
-
 }
