--- a/islt_7355/project4style.css
+++ b/islt_7355/project4style.css
@@ -27,7 +27,7 @@ body {
 /*Outer box for section 1 of Project page*/
 .a{
     grid-column: col 1 / span 3;
-	grid-row: row 1 / span 3;
+	grid-row: row 1;
 	display: grid;
     grid-gap: 10px;
 	grid-template-columns: 2fr 1fr 1fr;
@@ -38,7 +38,7 @@ body {
 /*Left inner box for section 1 of Project page*/
 .b{
     grid-column: 1;
-    grid-row: 1 / 3;
+    grid-row: 1;
 }
 
 /*Right inner box 1 for section 1 of Project page*/
@@ -51,6 +51,38 @@ body {
     grid-column: 3;
     grid-row: 1;
     
+}
+
+/*Table settings w/in cb*/
+.cb table{
+    width: 500px;
+    border: 1px solid #516769;
+    text-align: center;
+    border-collapse:collapse;
+}
+
+.cb table thead{
+    background-color: #FFA39E;
+}
+
+.cb table th{
+    border: 1px solid #516769;
+}
+
+.cb table tr{
+    border: 1px solid #516769;
+}
+
+.cb table tr td{
+    border: 1px solid #516769;
+}
+
+.cb table tbody tr:nth-child(odd){
+    background-color: #FFE09E;
+}
+
+.cb table tfoot{
+    background-color: #FFA39E;
 }
 
 /*Section 2 of Project page*/
@@ -100,7 +132,40 @@ footer a {
     width: 20px;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 900px) {
+
+    .a{
+        grid-column: col 1 / span 2;
+        grid-row: row 1 / span 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 2%;
+    }
+    
+    .b{
+        grid-column: 1;
+        grid-row: 1 / 2;
+    }
+
+    .ca{
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .cb{
+        grid-column: 2;
+        grid-row: 2;
+        align-items: center;
+    }
+
+    .cb table{
+        width: 100%;
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 650px) {
     h1 { color: #516769; font-size: 22pt; font-family: Alike;}
     h2 { color: #FFA39E; font-size: 20pt; margin-top: 10px; margin-bottom: 3px; font-family: Montserrat;}
     h3 { color: #516769; font-size: 14pt; font-family: Montserrat;}
@@ -128,6 +193,11 @@ footer a {
     .cb{
         grid-column: 1 / 2;
         grid-row: 3;
+        align-items: center;
     }
 
+    .cb table{
+        width: 100%;
+        font-size: 12px;
+    }
 }
