--- a/islt_7355/reflectionstyle.css
+++ b/islt_7355/reflectionstyle.css
@@ -31,6 +31,7 @@ body{
 	display: grid;
     grid-gap: 10px;
 	grid-template-columns: 1fr 1fr 1fr;
+    padding: 10px;
 }
 
 /*Left inner box for sections 1 & 3 of Reflection page*/
@@ -58,6 +59,7 @@ body{
 	display: grid;
     grid-gap: 10px;
 	grid-template-columns: 1fr 1fr 1fr;
+    padding: 10px;
 }
 
 /*Leftmost inner box for sections 2 & 4 of Reflection page*/
