--- a/islt_7355/contactstyle.css
+++ b/islt_7355/contactstyle.css
@@ -14,6 +14,12 @@
         
 }
 
+header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
 
 body {
     margin: 0;
@@ -93,7 +99,10 @@ p { color: #516769;font-family: Alike;}
 
 footer {
     background-image: url(FooterBG.png);
-    margin-bottom: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 5px;
 }
 
 footer p {
