--- a/islt_7355/indexstyle.css
+++ b/islt_7355/indexstyle.css
@@ -14,6 +14,13 @@
         
 }
 
+header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
+
 body {
     margin: 0;
 }
@@ -91,8 +98,12 @@ blockquote { color: #516769; font-family: Alike;}
 }
 
 footer {
+    position: fixed;
     background-image: url(FooterBG.png);
-    margin-bottom: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 5px;
 }
 
 footer p {
