--- a/islt_7355/project2style.css
+++ b/islt_7355/project2style.css
@@ -20,6 +20,13 @@ h3 { color: #516769; font-family: Montserrat;}
 p { color: #516769;font-family: Alike;}
 blockquote { color: #516769; font-family: Alike;}
 
+header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
+
 body {
     margin: 0;
 }
@@ -68,7 +75,10 @@ body {
 /*Footer section*/
 footer {
     background-image: url(FooterBG.png);
-    margin-bottom: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 5px;
 }
 
 footer p {
